# biorempp_web

./: .dockerignore  .env.production  .git_commit_message.txt  .git_tag_message.txt  .gitignore  .readthedocs.yml  BioRemPP Docs - Use Cases Diagrams.drawio  CHANGELOG.md  DOCKER_COMPOSE_TI.txt  LICENSE  README.md  __init__.py  biorempp.conf.production  biorempp_app.py  configurar_ssl.sh  deploy_config.sh  diagnostico_rapido.sh  docker-compose.yml  fix_nginx_ipv4.sh  fix_rapido.sh  gunicorn_config.py  instalar_nginx.sh  logs.sh  mkdocs.yml  nginx.conf.production  pyproject.toml  restart.sh  setup_completo.sh  setup_scripts.sh  start.sh  status.sh  stop.sh  wsgi.py
.deploy_do/lib/: common.sh
.docker/: Dockerfile  entrypoint.sh  healthcheck.sh  prometheus-entrypoint.sh
.docker/nginx/: nginx.dev.conf  nginx.prod.conf  nginx.prod.tls-mock.conf
.env/: env.example  env.production
.github/workflows/: docs-ci.yml  internal_validation_gx.yml  resume-rate-limit-integration.yml
config/: logging_dev.yaml  logging_prod.yaml  settings.py
data/databases/: biorempp_db.csv  checksums.sha256  hadeg_db.csv  toxcsm_db.csv
docs/: index.md  requirements.txt
docs/about/: changelog.md  contact.md  how-to-cite.md  license.md  terms-of-use.md
docs/api/: application.md  domain.md  index.md  infrastructure.md  shared.md
docs/api/application/: core.md  dtos.md  mappers.md  plot_services.md  services.md
docs/api/domain/: entities.md  plot_strategies.md  plot_strategies_base.md  plot_strategies_charts.md  repositories.md  services.md  value_objects.md
docs/api/infrastructure/: cache.md  config.md  persistence.md
docs/api/presentation/: callbacks.md  core_callbacks.md  data_tables.md  module1_callbacks.md  module2_callbacks.md  module3_callbacks.md  module4_callbacks.md  module5_callbacks.md  module6_callbacks.md  module7_callbacks.md  module8_callbacks.md  module_callbacks.md
docs/api/shared/: exceptions.md  logger_utils.md  logging.md
docs/config/: docker-integration.md  environment-variables.md  gunicorn.md  health-endpoints.md  index.md  institutional_ingress_handoff.md  logging.md  nginx-integration.md  yaml-configuration.md
docs/database_schemas/: biorempp-schema.md  toxcsm-schema.md
docs/getting-started/: example-datasets.md  faq.md  index.md  input-format.md  quickstart.md
docs/javascripts/: lightbox-init.js
docs/methods/: data-sources.md  index.md  limitations.md  mapping-strategy.md  methods-overview.md  regulatory-frameworks.md  use-case-yaml.md
docs/stylesheets/: extra.css
docs/use_cases/: README.md  index.md
docs/use_cases/module1/: intro.md  uc_1.1.md  uc_1.2.md  uc_1.3.md  uc_1.4.md  uc_1.5.md  uc_1.6.md
docs/use_cases/module2/: intro.md  uc_2.1.md  uc_2.2.md  uc_2.3.md  uc_2.4.md  uc_2.5.md
docs/use_cases/module3/: intro.md  uc_3.1.md  uc_3.2.md  uc_3.3.md  uc_3.4.md  uc_3.5.md  uc_3.6.md  uc_3.7.md
docs/use_cases/module4/: intro.md  uc_4.1.md  uc_4.10.md  uc_4.11.md  uc_4.12.md  uc_4.13.md  uc_4.2.md  uc_4.3.md  uc_4.4.md  uc_4.5.md  uc_4.6.md  uc_4.7.md  uc_4.8.md  uc_4.9.md
docs/use_cases/module5/: intro.md  uc_5.1.md  uc_5.2.md  uc_5.3.md  uc_5.4.md  uc_5.5.md  uc_5.6.md
docs/use_cases/module6/: intro.md  uc_6.1.md  uc_6.2.md  uc_6.3.md  uc_6.4.md  uc_6.5.md
docs/use_cases/module7/: intro.md  uc_7.1.md  uc_7.2.md  uc_7.3.md  uc_7.4.md  uc_7.5.md  uc_7.6.md  uc_7.7.md
docs/use_cases/module8/: intro.md  uc_8.1.md  uc_8.2.md  uc_8.3.md  uc_8.4.md  uc_8.5.md  uc_8.6.md  uc_8.7.md
docs/user-guide/: downloads.md  index.md  interpretation.md  results-page.md  troubleshooting.md
docs/validation/: index.md  internal-validation.md  profiling-biorempp.md  test-suite.md  validation-suite.md  validation-v1.md
internal_validation/: README.md  __init__.py
internal_validation/config/: validation_config.yaml
internal_validation/data/example_datasets/: Example_A.txt  Example_B.txt  Example_C.txt  Example_D.txt  Example_E.txt  README.md
internal_validation/docs/: operation_guide.md
internal_validation/gx_context/: great_expectations.yml
internal_validation/gx_context/checkpoints/: biorempp_full_validation.json  biorempp_schema_validation.json
internal_validation/gx_context/expectations/: biorempp_db_schema_integrity_suite.json  biorempp_invariants_suite.json  biorempp_mapping_consistency_suite.json  biorempp_vocabulary_suite.json  hadeg_db_schema_integrity_suite.json  kegg_degradation_db_schema_integrity_suite.json  toxcsm_db_schema_integrity_suite.json  toxcsm_invariants_suite.json  toxcsm_mapping_linkage_suite.json
internal_validation/scripts/: __init__.py  build_data_docs.py  ci_validation.py  configure_data_sources.py  create_baseline_snapshot.py  create_checkpoints.py  create_validation_definitions.py  init_gx_context.py  run_all_gx.py  verify_gx_setup.py
internal_validation/suites/: __init__.py
observability/docs/: resume_runbook.md
observability/prometheus/: prometheus.yml
observability/scripts/: prod_optimization_runner.py  results_phase0_report.py  results_phase0_smoke.py  results_view_validation_report.py  results_view_validation_runner.py
src/: __init__.py
src/application/: __init__.py
src/assets/: analysis_suggestions.css  contact_styles.css  faq_styles.css  home_responsive.css  intro_actions.css  module_header_styles.css  navbar_responsive.css  navigation.css  navigation_scroll.js  regulatory_styles.css  results_module_selector_tabs.css  results_transition_phase0.js  z_dash_global_loading_fix.css
src/config copy/: logging_dev.yaml  logging_prod.yaml  practical_applications_config.yaml  settings.py
src/data/: exemple_dataset.txt
src/data_tables/: __init__.py  biorempp_table.py  hadeg_table.py  kegg_table.py  toxcsm_table.py
src/domain/: __init__.py
src/infrastructure/: __init__.py
src/presentation/: __init__.py  routing.py
src/shared/: __init__.py  exceptions.py  logger_utils.py
tests/: README.md  __init__.py  conftest.py
tests/analysis/: database_analysis.json  representative_data.json
tests/integration/: test_resume_rate_limit_redis.py
tests/unit/: __init__.py
(+822 files in other folders)
